# afo-ai

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
