[package]
name = "afo-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLM inference – choose one:
# Option A: llama-cpp-rs (GGUF models)
llama-cpp-2 = "0.1"

# Option B: mistral.rs (pure Rust, easier deployment)
# mistralrs = { version = "0.1", features = ["metal"] }  # metal for macOS, cuda for NVIDIA